; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_4345.c_xpltInitializePsApi.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_4345.c_xpltInitializePsApi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"(*)Loading PSAPI...\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"(+)PSAPI loaded OK.\0A\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"(-)Unable to load PSAPI. Sorry.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @xpltInitializePsApi() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %3 = call i32* (...) @psLoad()
  store i32* %3, i32** %1, align 8
  %4 = load i32*, i32** %1, align 8
  %5 = icmp ne i32* null, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  br label %10

8:                                                ; preds = %0
  %9 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %6
  %11 = load i32*, i32** %1, align 8
  ret i32* %11
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32* @psLoad(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
